tests/errors/wrong_arg_count.ne
function a(arg1: int32, arg2: int32): int32
{
    return arg1 + arg2;
}

function main(): int32
{
    return a(1, 2, 3);
}
